# vanilla-discord-bridge

./: Cargo.toml  README.md
src/: auth.rs  content.rs  discord.rs  legacy.rs  main.rs  rcon.rs  wrapper.rs
