[package]
name = "vanilla-discord-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-env = "0.2"

tokio = { version = "1.44", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "parking_lot",
    "signal",
] }
anyhow = "1"

axum = "0.8"
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = "0.3"

twilight-http = { version = "0.16", default-features = false, features = [
    "rustls-aws_lc_rs",
    "decompression",
    "rustls-platform-verifier",
] }
twilight-model = "0.16"
twilight-gateway = "0.16"

nix = { version = "0.30", features = ["signal"] }

regex = "1.11"

[profile.release]
lto = "thin"
strip = true